// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled basic render 1`] = `
.css-1vj1sv9 {
  font-size: 20px;
}

<h1
  className="css-1vj1sv9"
>
  hello world
</h1>
`;

exports[`styled basic render with object as style 1`] = `
.css-kp2uw9 {
  font-size: 20px;
}

<h1
  className="css-kp2uw9"
>
  hello world
</h1>
`;

exports[`styled call expression 1`] = `
.css-1vj1sv9 {
  font-size: 20px;
}

<h1
  className="css-1vj1sv9"
>
  hello world
</h1>
`;

exports[`styled component as selector 1`] = `
.css-1vj1sv9 {
  font-size: 20px;
}

.css-qrvryj {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="css-qrvryj"
>
  hello 
  <h1
    className="css-1vj1sv9"
  >
    This will be green
  </h1>
   world
</div>
`;

exports[`styled composes 1`] = `
.css-1baty9 {
  color: blue;
  height: 64px;
  font-size: 32px;
}

<h1
  className="css-1baty9"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled composes based on props 1`] = `
.css-bithoy {
  color: blue;
}

<h1
  a={true}
  className="css-bithoy"
>
  hello world
</h1>
`;

exports[`styled composes based on props 2`] = `
.css-45352 {
  color: green;
}

<h1
  className="css-45352"
>
  hello world
</h1>
`;

exports[`styled composes with objects 1`] = `
.css-k8dg7v {
  color: #333;
  font-size: 1.333em;
  height: 64px;
  font-size: 32px;
}

@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
    only screen and (min--moz-device-pixel-ratio: 1.5),
    only screen and (-o-min-device-pixel-ratio: 1.5/1),
    only screen and (min-resolution: 144dpi),
    only screen and (min-resolution: 1.5dppx) {
  .css-k8dg7v {
    font-size: 1.4323121856191332em;
  }
}

<h1
  className="css-k8dg7v"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled composition 1`] = `
.css-1x2u9fm {
  font-size: 13.333333333333334px;
}

<h1
  className="css-1x2u9fm"
>
  hello world
</h1>
`;

exports[`styled function in expression 1`] = `
.css-1iqzzhq {
  font-size: 40px;
}

<h1
  className="css-1iqzzhq"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled higher order component 1`] = `
.css-1nkevqp {
  font-size: 20px;
  background-color: '#343a40';
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="css-1nkevqp"
/>
`;

exports[`styled innerRef 1`] = `
.css-f8g05s {
  font-size: 12px;
}

<h1
  className="css-f8g05s"
>
  hello world
</h1>
`;

exports[`styled name 1`] = `
.css-1i0qtj6 {
  name: FancyH1;
  font-size: 20px;
}

<h1
  className="css-1i0qtj6"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
.css-f8g05s {
  font-size: 12px;
}

<h1
  className="css-f8g05s"
>
  hello world
</h1>
`;

exports[`styled objects 1`] = `
.css-1j0hret {
  padding: 10px;
  display: flex;
}

<h1
  className="some-class css-1j0hret"
  display="flex"
>
  hello world
</h1>
`;

exports[`styled themes 1`] = `
.css-93wdk {
  background-color: #ffd43b;
  color: #8c81d8;
  height: 64px;
  font-size: 32px;
}

<span
  className="css-93wdk"
  scale={2}
>
  hello world
</span>
`;

exports[`styled throws if undefined is passed as the component 1`] = `
"You are trying to create a styled element with an undefined component.
You may have forgotten to import it."
`;
